--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "glad-functions": "0.0.2",
+    "envs-checker": "0.0.0",
+    "glad-functions": "0.0.6",
     "prelude-ls": "^1.1.2"
   },
   "devDependencies": {},
